Now errors directly returns ErrorResponse